ZetaSpectralReconstruction: headless render and parallel T_MAX sweep
Adds --T_MAX=<d>, --N_T=<n>, --render=<path>, --sweep=N,DIR[,FPS[,tMin[,tMax]]]
command-line flags. When --render is set, the Application produces a
1920x1080 PNG and exits without showing a window. The --sweep driver
spawns up to availableProcessors() child JVMs, each rendering one frame
at a geometrically-spaced T_MAX in [tMin, tMax], skips frames whose PNGs
already exist (crash-resumable), waits for completion, and invokes ffmpeg
via ProcessBuilder to stitch the frames into animation.mp4 with libx264
and yuv420p. All automation is in Java; no shell scripts. T_MAX, N_T,
and DT are now mutable statics recomputed after parameter override.